--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "A bootstrap for katas using TypeScript and Vitest",
   "main": "dist/index.js",
   "scripts": {
+    "build": "tsc",
+    "build:clean": "npm run clean && npm run build",
+    "clean": "rimraf -g dist *.tsbuildinfo",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -13,5 +16,11 @@
     "bootstrap"
   ],
   "author": "Benjamin Rae <benjaminrae93@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^20.8.10",
+    "rimraf": "^5.0.5",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
+  }
 }
