--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "scripts": {
     "build": "tsc",
     "build:clean": "npm run clean && npm run build",
+    "lint": "eslint . --max-warnings=0 && tsc --noEmit",
     "clean": "rimraf -g dist *.tsbuildinfo",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_ENV=test && vitest run",
+    "test:watch": "cross-env NODE_ENV=test && vitest watch",
+    "test:coverage": "cross-env NODE_ENV=test && vitest run --coverage"
   },
   "keywords": [
     "typescript",
@@ -21,12 +24,14 @@
     "@types/node": "^20.8.10",
     "@typescript-eslint/eslint-plugin": ">=6.0.0",
     "@typescript-eslint/parser": ">=6.0.0",
+    "cross-env": "^7.0.3",
     "eslint": ">=8.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^1.0.1",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.6"
   }
 }
