chore: add vitest globals

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
     "moduleResolution": "node",
     "target": "ESNext",
     "importHelpers": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "types": [
+      "vitest/globals"
+    ]
   }
 }
