--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A bootstrap for katas using TypeScript and Vitest",
   "main": "dist/index.js",
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "build:clean": "npm run clean && npm run build",
@@ -21,18 +22,16 @@
   "author": "Benjamin Rae <benjaminrae93@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.11.16",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "@vitest/coverage-v8": "^1.2.2",
+    "@eslint/js": "^9.18.0",
+    "@types/node": "^22.10.6",
+    "@vitest/coverage-v8": "^2.1.8",
     "cross-env": "^7.0.3",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-xo": "^0.43.1",
-    "eslint-config-xo-typescript": "^1.0.1",
-    "rimraf": "^5.0.5",
+    "eslint": "^9.18.0",
+    "globals": "^15.14.0",
+    "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "vitest": "^1.2.2"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.20.0",
+    "vitest": "^2.1.8"
   }
 }
